--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -58,6 +58,7 @@
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 @media screen and (max-width: 660px) {
