Added notification button to navbar

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -77,3 +77,10 @@
   position: relative;
   font-size: large;
 }
+
+.navbar-icon {
+  float: right;
+  color: white;
+  text-decoration: none;
+  border-radius: 2px;
+}
