--- a/src/css/notification.css
+++ b/src/css/notification.css
@@ -116,3 +116,11 @@
 .notifications-settings:hover {
     text-decoration: underline;
 }
+
+.notification-toast-body {
+  color: black;
+}
+
+.notification-toast-progress {
+  background: #2185d0!important;
+}
