--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,3 +1,25 @@
 .profile {
     text-align: center;
 }
+
+.ui.card .image {
+    background-color: white;
+}
+
+.profile-avatar {
+    height: 30px;
+    border-radius: 50%;
+    display: block;
+    float: left;
+}
+
+.profile-text {
+    float: left;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
+.profile-link:hover {
+    color: white;
+    text-decoration: none;
+}
